<resources>
    <string name="language_setting">Language Setting</string>
    <string name="press_again_exit">Press again exit</string>
    <string name="checknetwork">Please check network</string>
    <string name="upversion_newversion">New Version</string>
    <string name="no_presission">No Premission</string>
    <string name="payonline">Pay Online</string>
    <string name="banktransfer">Bank Transfer</string>
    <string name="block_community">Block Community</string>
    <string name="block_news">Block News</string>
    <string name="community_chat">Community Chat</string>
    <string name="farm_community">Farm Community</string>
    <string name="leaderbord">Leaderbord</string>
    <string name="Lucky_draw">Lucky Draw</string>
    <string name="faq">FAQ</string>
    <string name="network_hashrate">Newwork Hashrate History</string>
    <string name="block_height">Block Height:</string>
    <string name="comput_power">Comput Power:</string>
    <string name="market_accounts">Accounts:</string>
    <string name="active_miners">Active Miners:</string>
    <string name="block_generation_time">Block Gen Time:</string>
    <string name="block_coinbase">Block Coinbase:</string>
    <string name="market_level">Level:</string>
    <string name="market_price">Price:</string>
    <string name="market_profit">Profit:</string>
    <string name="market_profit_content">%s %sDays(%s per day)</string>
    <string name="market_sale">Sale:</string>
    <string name="market_fodder">Fodder:</string>
    <string name="market_supply">Supply:</string>
    <string name="market_perday">%s/Day</string>
    <string name="rush_buy">Rush Buy</string>
    <string name="buy_success">Buy success</string>
    <string name="market_animal_normal">Normal</string>
    <string name="hen">Hen</string>
    <string name="rabbit">Rabbit</string>
    <string name="sheep">Sheep</string>
    <string name="dog">Dog</string>
    <string name="cow">Cow</string>
    <string name="horse">Horse</string>
    <string name="tiger">Tiger</string>
    <string name="mouse">Mouse</string>
    <string name="share_to_facebook">Refer Facebook</string>
    <string name="share_to_twitter">Refer Twitter</string>
    <string name="share_daily_checkin">Daily Check-in</string>
    <string name="share_to_whatsapp">Refer WhatsApp</string>
    <string name="share_to_telegram">Refer Telegram</string>
    <string name="share_des1">分享条件：注册会员每天可获得10次推荐分享的机会，每天零时将自动更新分享次数。</string>
    <string name="share_des2">分享说明：会员完成分享，即可获得分享次数相应数量的“饲料”奖励，获得的奖励系统将自动派发到您的账户，可在“我的记录”里查看。</string>
    <string name="pls_refresh">Please refresh</string>
    <string name="share_success">Share Success</string>
    <string name="sign_success">Sign Success</string>
    <string name="sign_already">Sign already</string>
    <string name="facebook_nocount">Facebook run out</string>
    <string name="twitter_nocount">Twitter run out</string>
    <string name="whatsapp_nocount">WhatsApp run out</string>
    <string name="telegram_nocount">Telegram run out</string>
    <string name="userinfo_avatar">Photo:</string>
    <string name="userinfo_name">User Name:</string>
    <string name="userinfo_nickname">Nick Name:</string>
    <string name="userinfo_phone">Cellphone:</string>
    <string name="userinfo_email">Email:</string>
    <string name="userinfo_facebook">FaceBook:</string>
    <string name="userinfo_confirm">Confirm</string>
    <string name="userinfo_cancel">Cancel</string>
    <string name="userinfo_setnickname">Set NickName</string>
    <string name="userinfo_setfacebook">Set FaceBook</string>
    <string name="mine_unlogin">Unlogin</string>
    <string name="mine_gc">GC</string>
    <string name="mine_lc">LC</string>
    <string name="mine_fodder">Fodder</string>
    <string name="fund_gc">GC</string>
    <string name="fund_lc">LC</string>
    <string name="fund_fodder">Fodder</string>
    <string name="fund_all">Detail</string>
    <string name="fund_recharge">Recharge(GC)</string>
    <string name="fund_withdraw">WithDraw(LC)</string>
    <string name="fund_trad1">Adopt Animal</string>
    <string name="fund_trad2">Deposit</string>
    <string name="fund_trad3">Promotions</string>
    <string name="fund_trad4">Correct</string>
    <string name="fund_trad5">Commission</string>
    <string name="fund_trad6">Agent</string>
    <string name="fund_trad7">Withdraw</string>
    <string name="fund_trad8">Profit</string>
    <string name="fund_trad9">Cancelwith</string>
    <string name="fund_trad10">Correct LC</string>
    <string name="fund_trad11">Share Facebook</string>
    <string name="fund_trad12">Share Twitter</string>
    <string name="fund_trad13">Share Group</string>
    <string name="fund_trad14">Feed</string>
    <string name="fund_trad15">Sign</string>
    <string name="fund_trad25">Correct</string>
    <string name="fund_trad26">Luck Draw</string>
    <string name="fund_item1">银行转账</string>
    <string name="fund_item4">在线支付</string>
    <string name="fund_item5">附言充值</string>
    <string name="fund_item6">返点</string>
    <string name="fund_item7">佣金</string>
    <string name="fund_item8">在线取款</string>
    <string name="fund_item14">人工出款</string>
    <string name="fund_item17">活动</string>
    <string name="fund_item19">修正</string>
    <string name="fund_item20">多次出款费用</string>
    <string name="fund_item26">银行卡转账</string>
    <string name="fund_item31">日出资</string>
    <string name="fund_item32">契约分红</string>
    <string name="fund_item34">转账</string>
    <string name="fund_state1">待处理</string>
    <string name="fund_state2">审核中</string>
    <string name="fund_state3">已取消</string>
    <string name="fund_state4">已入款</string>
    <string name="fund_state5">审核成功</string>
    <string name="fund_state6">已出款</string>
    <string name="fund_state7">拒绝出款</string>
    <string name="fund_state8">取消失败</string>
    <string name="fund_state9">未完成提交</string>
    <string name="fund_state10">已发放</string>
    <string name="fund_state100">出款中</string>
    <string name="anihis_price">Price</string>
    <string name="anihis_begin">Begin Time</string>
    <string name="anihis_end">End Time</string>
    <string name="anihis_profit">Profit:</string>
    <string name="anihis_profitrate">Profit Rate:</string>
    <string name="anihis_days">%s Days</string>
    <string name="growing">Growing</string>
    <string name="waitsale">WaitingSale</string>
    <string name="profited">Profited</string>
    <string name="changepwd_oldpwd">Old Password:</string>
    <string name="changepwd_newpwd">New Password:</string>
    <string name="changepwd_confirm">Confirm Password:</string>
    <string name="plenterloginpwd">Please Enter Login Password</string>
    <string name="plenteroldpwd">Please Enter Old Password</string>
    <string name="plenternewpwd">Please Enter New Password</string>
    <string name="plconfirmpwd">Please Confirm Password</string>
    <string name="pwdenternotequal">两次密码输入不一致</string>
    <string name="bankcard_mycard">My Cards</string>
    <string name="bankcard_addcard">Add Card</string>
    <string name="set_default_card">Set Default Card</string>
    <string name="modify">Modify</string>
    <string name="blocknew_detai">Detail</string>
    <string name="luckdraw_left">Free Times Todays:%s</string>
    <string name="congratulations">Congratulations</string>
    <string name="luckdraw_nocount">LuckDraw run out</string>
    <string name="team_username">User</string>
    <string name="team_gc">GC</string>
    <string name="team_lc">LC</string>
    <string name="team_subnum">Sub</string>
    <string name="team_time">Time</string>
    <string name="team_farm">Farm</string>
    <string name="team_level1">Level1</string>
    <string name="team_level2">Level2</string>
    <string name="team_level3">Level3</string>
    <string name="login_username">UserName</string>
    <string name="login_password">Password</string>
    <string name="login_rember">Remember Me</string>
    <string name="login_register">New Account</string>
    <string name="login_forget">Forget PWD</string>
    <string name="register_confirm">Confirm</string>
    <string name="register_invcode">Inv code</string>
    <string name="recharge_choose_amount">Choose Amount(GC)</string>
    <string name="plenterrechargeamount">Please Enter Recharge Amount</string>
    <string name="withdraw_choose_card">Choose Bank Card</string>
    <string name="withdraw_enter_amount">Enter LC Amount</string>
    <string name="withdraw_funderpwd">Fund Password</string>
    <string name="withdraw_history">History</string>
    <string name="unit_yuan"></string>
    <string name="invite_expand">Expand your team!</string>
    <string name="kf">Service</string>
    <string name="pick_bankname">Bank Name</string>
    <string name="pick_linkcode">Link Code</string>
    <string name="owner">Owner</string>
    <string name="toUpdate">Upgrade</string>
    <string name="imminstal">Install</string>
    <string name="downloading">Downloading</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_error">Download Fail</string>
    <string name="farm_feedall_left">Inventory:</string>
    <string name="farm_feedall_type">Type:</string>
    <string name="farm_feedall_need">Need:</string>
    <string name="dialog_all_fodder">Feed All</string>
    <string name="dialog_today_fodder">Feed Today</string>
    <string name="farm_gather_title">Animal block settlement is queuing</string>
    <string name="farm_gather_ahead"><Data><![CDATA[<font color="#ff5100">%s</font>ahead of you]]></Data></string>
    <string name="farm_gather_minute"><Data><![CDATA[May take<font color="#ff5100">%s</font>minutes]]></Data></string>
    <string name="dialog_rush_name">Name:</string>
    <string name="dialog_rush_mained">Remained:</string>
    <string name="dialog_rush_count">Count:</string>
    <string name="credit_set_fund_passwd">Set fund password</string>
    <string name="credit_pls_enter_real_name">Please enter real name</string>
    <string name="credit_pls_enter_phone_num">Please enter phone number</string>
    <string name="credit_pls_enter_fund_passwd">Please enter fund password</string>
    <string name="agentarch_name">Use your social circle, it’s better to create the future by yourself than just thinking!</string>
    <string name="agentarch_tips1">1.Your input: Only if you have a mobile phone and social circle, you just need share 10 to 20 promotional information for 30 minutes a day.</string>
    <string name="agentarch_tips2">2.How to get money: Share to your friends to make your team, as the team becoming large, you will get recharge rebate much.</string>
    <string name="agentarch_tips3">3.Agency Privileges」：Join our community team，we have professional financial tutors to provide a full set of technical guarantees, join immediately, get profit immediately.
        Suitable for everyone, full-time and part-time, zero risk, permanent income, you only need to stick to the implementation, there is no upper limit for monthly income over 10,000. Easily achieve financial freedom, your future is already here.</string>
    <string name="agentarch_tips4">4.Join conditions: It just costs 10GC to be an official agent, limited spots!</string>
    <string name="agencyincome_name">Promotional Terms &amp; Details:</string>
    <string name="agencyincome_tips1">1.The bonus is given according to the first deposit amount of the referred member,and each referred member can only redeem once</string>
    <string name="agencyincome_tips2">2.After receiving the bonus,the valid total bet(first time deposit amount+bonus)times 1 (minimum play through times) so that member can withdraw.</string>
    <string name="agencyincome_tips3">3.Each member with the same IP address,e-mail address,phone number,and payment method(debit card/credit card/bank account)can only redeem the bonus once.If the member has cancel and/or forfeit the members bonus</string>
</resources>