<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_retc_recharge1"
        android:padding="12dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agencyincome_name"
            android:textSize="16sp"
            android:textColor="#bc5a37"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/agencyincome_tips1"
            android:textColor="#bc5a37"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/agencyincome_tips2"
            android:textColor="#bc5a37"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/agencyincome_tips3"
            android:textColor="#bc5a37"
            android:textSize="14sp"
            android:textStyle="bold"
            />



    </LinearLayout>



</LinearLayout>