<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_bg"
    android:gravity="center_horizontal"
    android:id="@+id/ll_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/layout_common_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:background="@drawable/bg_retc_recharge1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepwd_oldpwd"
                android:textColor="@color/color_title2"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/et1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/plenteroldpwd"
                android:textColor="#ffbc9a"
                android:textColorHint="#ffbc9a"
                android:textSize="14sp"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/pwd_sh_selector"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepwd_newpwd"
                android:textColor="@color/color_title2"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/et2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/plenternewpwd"
                android:textColor="#ffbc9a"
                android:textColorHint="#ffbc9a"
                android:textSize="14sp"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/pwd_sh_selector"
                />



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepwd_confirm"
                android:textColor="@color/color_title2"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/et3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/plconfirmpwd"
                android:textColor="#ffbc9a"
                android:textColorHint="#ffbc9a"
                android:textSize="14sp"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/cb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/pwd_sh_selector"
                />



        </LinearLayout>



    </LinearLayout>

    <ImageView
        android:id="@+id/iv_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@mipmap/ic_submit_changepwd"
        android:scaleType="fitXY"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        />




</LinearLayout>