<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_retc_white10"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userinfo_setnickname"
        android:textColor="@color/color_333"
        android:textSize="18sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="10dp"
        android:background="@drawable/bk_et_bg"
        android:singleLine="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/bg_retc_gray9_c10"
            android:text="@string/userinfo_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnSure"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_gradient_c10"
            android:text="@string/userinfo_confirm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>
</LinearLayout>