<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_common_header"/>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_retc_recharge1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/fund_all"
                    android:textColor="@drawable/color_radiobutton_selector" />

                <RadioButton
                    android:id="@+id/radio_btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/fund_recharge"
                    android:textColor="@drawable/color_radiobutton_selector" />

                <RadioButton
                    android:id="@+id/radio_btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/fund_withdraw"
                    android:textColor="@drawable/color_radiobutton_selector" />

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />


        </LinearLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>