<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_bg"
    android:gravity="center_horizontal"
    android:id="@+id/ll_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_common_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_retc_recharge1"
        android:padding="12dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv_photo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_avatar"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />
            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_toEndOf="@+id/tv_photo"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_avatar_default"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_userinfo_right"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_name"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lolahaha"
                android:textSize="14sp"
                android:textColor="#ffbc9a"
                />



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:id="@+id/ll_nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >

            <TextView

                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_nickname"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />
            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lolahaha"
                android:textSize="14sp"
                android:textColor="#ffbc9a"
                />



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_phone"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15688990066"
                android:textSize="14sp"
                android:textColor="#ffbc9a"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >

            <TextView

                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_email"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx@gmail.com"
                android:textSize="14sp"
                android:textColor="#ffbc9a"
                />




        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeecb"
            />
        <LinearLayout
            android:id="@+id/ll_facebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >

            <TextView

                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_facebook"
                android:textSize="14sp"
                android:textColor="@color/color_title2"
                />

            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jony"
                android:textSize="14sp"
                android:textColor="#ffbc9a"
                />


        </LinearLayout>




    </LinearLayout>

    <ImageView
        android:id="@+id/iv_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_submit_userinfo"
        />

</LinearLayout>